--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "krumb",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Filter only owned entity properties.",
   "main": "krumb.js",
+  "support": "krumb.support.js",
+  "deploy": "krumb.deploy.js",
+  "browser": "krumb.deploy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel krumb.js -o krumb.support.js && webpack",
+    "test": "mocha krumb-test.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +27,16 @@
   "bugs": {
     "url": "https://github.com/volkovasystems/krumb/issues"
   },
-  "homepage": "https://github.com/volkovasystems/krumb#readme"
+  "homepage": "https://github.com/volkovasystems/krumb#readme",
+  "dependencies": {
+    "babel-runtime": "^6.22.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "source-map-loader": "^0.1.6",
+    "webpack": "^2.2.1"
+  }
 }
