--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
   "name": "krumb",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Filter only owned entity properties.",
   "main": "krumb.deploy.js",
+  "support": "krumb.support.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
