--- a/package.json
+++ b/package.json
@@ -1,45 +1,51 @@
 {
-  "name": "krumb",
-  "version": "0.5.0",
-  "description": "Filter only owned entity properties.",
-  "main": "krumb.js",
-  "support": "krumb.support.js",
-  "deploy": "krumb.deploy.js",
-  "browser": "krumb.deploy.js",
-  "scripts": {
-    "build": "babel krumb.js --out-file krumb.support.js --source-maps && webpack --progress --display-modules",
-    "test": "mocha krumb-test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/volkovasystems/krumb.git"
-  },
-  "keywords": [
-    "filter",
-    "own",
-    "enumerable",
-    "property",
-    "entity",
-    "krumb"
-  ],
-  "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-  "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/volkovasystems/krumb/issues"
-  },
-  "homepage": "https://github.com/volkovasystems/krumb#readme",
-  "dependencies": {
-    "babel-runtime": "^6.23.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^2.6.1"
-  }
+	"name": "krumb",
+	"version": "0.6.0",
+	"description": "Filter only owned entity properties.",
+	"main": "krumb.js",
+	"support": "krumb.support.js",
+	"deploy": "krumb.deploy.js",
+	"browser": "krumb.deploy.js",
+	"scripts": {
+		"build": "babel krumb.js --out-file krumb.support.js --source-maps && webpack --progress --display-modules",
+		"pristine": "rsetmod clean && flxc execute ./.install.sh",
+		"clear": "rsetmod clean --clear",
+		"formal": "jesy apply '*.json'",
+		"pretest": "npm run clear && npm run build",
+		"test": "node krumb-test.js",
+		"posttest": "npm run formal"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/volkovasystems/krumb.git"
+	},
+	"keywords": [
+		"filter",
+		"own",
+		"enumerable",
+		"property",
+		"entity",
+		"krumb"
+	],
+	"author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+	"contributors": [
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/volkovasystems/krumb/issues"
+	},
+	"homepage": "https://github.com/volkovasystems/krumb#readme",
+	"dependencies": {
+		"babel-runtime": "^6.25.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.25.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-latest": "^6.24.1",
+		"source-map-loader": "^0.2.1",
+		"webpack": "^3.4.1"
+	}
 }
